# meepo

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
app/api/: init.py  main.py
app/api/author/: handler.py  models.py
app/api/book/: handler.py  models.py
app/api/common/errors/: response.py
app/api/common/middlewares/: __init__.py  exception_middleware.py  logger_middleware.py
app/api/shop/: handler.py  models.py
app/config/: base.py  init.py
app/config/infrastructure/: mongo_factory.py  mysql_factory.py  redis_factory.py
app/config/modules/: author_container.py  book_container.py  shop_container.py
app/modules/author/application/: response.py  services.py
app/modules/author/domain/: entities.py  repositories.py  services.py
app/modules/author/infrastructure/: author_repository.py  models.py
app/modules/book/application/: response.py
app/modules/book/domain/: entities.py  exceptions.py  services.py
app/modules/book/infrastructure/: book_repository.py  models.py
app/modules/shop/application/: response.py  services.py
app/modules/shop/domain/: entities.py  repositoies.py  services.py
app/modules/shop/infrastructure/: models.py  shop_repository.py
app/seedwork/domain/: entities.py
app/seedwork/infrastructure/: repository.py
app/task/: __init__.py  config.py
app/task/crontab/: __init__.py  example.py
app/utils/: logger.py
cantor/api/: init.py  main.py  shared.py
cantor/api/book/: handler.py
cantor/api/common/book/: handler.py  models.py
cantor/api/common/errors/: __init__.py  response.py
cantor/api/common/middlewares/: __init__.py  exception_middleware.py  logger_middleware.py
cantor/api/shop/: handler.py  models.py
cantor/config/: base.py  init.py
cantor/config/infrastructure/: mongo_factory.py  mysql_factory.py  redis_factory.py
cantor/config/modules/: book_container.py  shop_container.py
cantor/modules/book/application/: services.py
cantor/modules/book/domain/: entities.py  exceptions.py  repositories.py
cantor/modules/book/infrastructure/: book_repository.py  models.py
cantor/modules/shop/application/: services.py
cantor/modules/shop/domain/: entities.py  repositoies.py  services.py
cantor/modules/shop/infrastructure/: models.py  shop_repository.py
cantor/seedwork/domain/: entities.py  exception.py
cantor/seedwork/infrastructure/: repository.py
settings/: __init__.py  config.toml  local_config.toml
